# Boids

./: .gitignore  CMakeLists.txt  README.md
Resources/Models/: boid.ply  cube.ply
Resources/Models/PowerPlant/Section1/part_g/: g0.ply
Resources/Models/PowerPlant/Section10/part_a/: g0.ply  g1.ply  g2.ply  g3.ply
Resources/Models/PowerPlant/Section10/part_b/: g0.ply  g1.ply  g2.ply  g3.ply
Resources/Models/PowerPlant/Section10/part_c/: g0.ply  g1.ply  g2.ply  g3.ply  g4.ply  g5.ply  g6.ply  g7.ply
Resources/Models/PowerPlant/Section10/part_d/: g0.ply  g1.ply  g2.ply  g3.ply  g4.ply  g5.ply
Resources/Models/PowerPlant/Section10/part_e/: g0.ply  g1.ply
Resources/Models/PowerPlant/Section10/part_f/: g0.ply  g1.ply  g2.ply  g3.ply  g4.ply  g5.ply  g6.ply
Resources/Models/PowerPlant/Section11/part_a/: g0.ply
Resources/Models/PowerPlant/Section11/part_c/: g0.ply  g1.ply
Resources/Models/PowerPlant/Section11/part_d/: g0.ply  g1.ply  g2.ply
Resources/Models/PowerPlant/Section12/part_a/: g0.ply  g1.ply  g2.ply  g3.ply  g4.ply  g5.ply
Resources/Models/PowerPlant/Section12/part_b/: g0.ply  g1.ply  g10.ply  g11.ply  g12.ply  g13.ply  g14.ply  g15.ply  g16.ply  g17.ply  g18.ply  g19.ply  g2.ply  g20.ply  g21.ply  g22.ply  g23.ply  g24.ply  g25.ply  g26.ply  g27.ply  g28.ply  g29.ply  g3.ply  g30.ply  g31.ply  g32.ply  g33.ply  g34.ply  g35.ply  g36.ply  g37.ply  g38.ply  g4.ply  g5.ply  g6.ply  g7.ply  g8.ply  g9.ply
Resources/Models/PowerPlant/Section12/part_c/: g0.ply  g1.ply  g2.ply  g3.ply  g4.ply  g5.ply  g6.ply  g7.ply
Resources/Shaders/: gbufferdebug.frag  gbufferdebug.vert  globallight.frag  phong_shading.frag  phong_shading.vert  prerender.frag  prerender.vert
Source/: Behavior.cpp  Behavior.h  Boid.cpp  Boid.h  Boids.cpp  Boids.h  CustomTypes.h  GameLoop.cpp  GameLoop.h  GameUI.cpp  GameUI.h
Source/Engine/: Color.h  Dice.cpp  Dice.h  FBO.cpp  FBO.h  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ProtoEngine.cpp  Transformable.cpp  Transformable.h  Types.h  UI.cpp  UI.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
cmake/: Bootstrap.cmake
(+1068 files in other folders)
